# 2d-raycast

./: .gitignore  README.md  angle_helper.hpp  main.cpp  meson.build  obstacle.cpp  obstacle.hpp  ray.cpp  ray.hpp  segment.cpp  segment.hpp  source.hpp  vector_helper.hpp
